--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
         <a href="cart.html" class="text-gray-700 hover:text-primary transition-all duration-300 hover:scale-110"><i class="fa fa-shopping-cart text-xl"></i></a>
         <span id="cart-count" class="absolute -top-2 -right-2 bg-gradient-to-r from-red-500 to-red-600 text-white text-xs font-bold px-2 py-0.5 rounded-full shadow-lg animate-pulse">0</span>
       </li>
+      <li>
+  <a href="login.html" 
+     class="inline-block px-6 py-2 
+            bg-primary text-white font-medium rounded-lg 
+            shadow-md hover:bg-primary/90 
+            transition-transform duration-300 hover:scale-105 
+            focus:outline-none focus:ring-2 focus:ring-primary focus:ring-offset-2 
+            w-full sm:w-auto text-center">
+    Login
+  </a>
+</li>
     </ul>
   </div>
 </nav>
@@ -253,3 +264,4 @@
 <script src="index.js"></script>
 </body>
 </html>
+
